--- a/testHtml/demo.html
+++ b/testHtml/demo.html
@@ -77,6 +77,10 @@
             <img src="" alt="">
         </div>
     </div>
-    <span class="text">Digital Consultancy</span>
+    <span class="text up"></span>
+    <span class="text down"></span>
+
+    <!-- custom -->
+    
 </body>
 </html>
