--- a/testHtml/demo.html
+++ b/testHtml/demo.html
@@ -81,6 +81,8 @@
     <span class="text down"></span>
 
     <!-- custom -->
-    
+    <div class="custom-item-logo"><img src="" alt=""></div>
+    <div class="custom-item-hoverImg"><img src="" alt=""></div>
+    <div class="custom-item-link"><a href=""></a></div>
 </body>
 </html>
