--- a/testHtml/demo.html
+++ b/testHtml/demo.html
@@ -95,5 +95,67 @@
     <!-- innovation -->
     <span class="innovation-image">{{ field_innovation_image }}</span>
 
+    <!-- location -->
+    美国 亚特兰大
+    巴西 坎皮纳斯
+    巴西 圣保罗
+    英国 伦敦
+    巴西 贝洛奥里藏特
+    巴西 里约热内卢
+    日本 东京
+    美国 纽约
+    美国 费城
+    中国 上海, 宁波
+
+
+    <!-- office -->
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/sites/default/files/inline-images/1.jpg">
+          </div>
+          <div class="swiper-slide">
+            <img src="/sites/default/files/inline-images/2.jpg">
+          </div>
+          <div class="swiper-slide">
+            <img src="/sites/default/files/inline-images/3.jpg">
+          </div>
+          <div class="swiper-slide">
+            <img src="/sites/default/files/inline-images/4.jpg">
+          </div>
+        </div>
+        <div class="button-prev"></div>
+        <div class="button-next"></div>
+    </div> 
+
+    <div class="china-office">
+        <h2>中国办事处</h2>
+        <div class="location-url">
+            <a href="http://j.map.baidu.com/JQj0I">百度地图链接</a>
+        </div>
+        <ul>
+          <li>上海</li>
+          <li>地址：上海市徐汇区天钥桥路580号6层</li>
+          <li>电话：400-100-6061</li>
+        </ul>
+        <p></p>
+        <div class="location-url">
+            <a href="http://j.map.baidu.com/JQj0I">百度地图链接</a>
+        </div>
+        <ul>
+          <li>宁波总部</li>
+          <li>地址：浙江省宁波市鄞州区天童南路700号荣安大厦A901</li>
+          <li>电话：+86（574）28816655</li>
+          <li>传真：+86（574）28816650</li>
+        </ul>
+    </div>
+
+    <!-- subscription -->
+    <p class="title">订阅最新数字化资讯与洞察</p>
+    <div class="box">
+        <input class="box-input" placeholder="你的Email地址" autocomplete="email" require type="email">
+        <button class="box-btn">提交</button>
+    </div>
+
 </body>
 </html>
