--- a/testHtml/contactUs.html
+++ b/testHtml/contactUs.html
@@ -153,8 +153,8 @@
     </style>
 </head>
 <body>
+    <div class="black-board"></div>
     <div class="contactUs">
-        <div class="black-board"></div>
         <div class="small-ctn">联系我们</div>
         <div class="contact-ctn">
             <div class="ctc-tel">
@@ -177,6 +177,7 @@
                 <img class="refresh" src="../images/refresh.png" alt="refresh">
             </div>
         </div>
+        <div class="cs-middle-chat"><span>跟CI&T聊聊</span></div>
     </div>
 </body>
 </html>
